// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Emotion primitives custom shouldForwardProp works 1`] = `
<div
  class="css-text-901oao r-color-185hjl9"
  dir="auto"
>
  Emotion
</div>
`;

exports[`Emotion primitives primitive should work with \`withComponent\` 1`] = `
<div
  class="css-text-901oao r-color-185hjl9"
  dir="auto"
>
  Mike
</div>
`;

exports[`Emotion primitives should pass props in withComponent 1`] = `
<div
  class="css-view-1dbjc4n r-backgroundColor-1542mo4"
/>
`;

exports[`Emotion primitives should pass props in withComponent 2`] = `
<div
  class="css-text-901oao r-backgroundColor-173gl9r"
  dir="auto"
/>
`;

exports[`Emotion primitives should render <Image /> 1`] = `
<div
  class="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
  style="border-top-color: rgba(255,105,180,1.00); border-right-color: rgba(255,105,180,1.00); border-bottom-color: rgba(255,105,180,1.00); border-left-color: rgba(255,105,180,1.00); border-top-style: solid; border-right-style: solid; border-bottom-style: solid; border-left-style: solid; border-top-width: 2px; border-right-width: 2px; border-bottom-width: 2px; border-left-width: 2px; height: 150px; width: 150px;"
>
  <div
    class="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
    style="background-image: url(https://camo.githubusercontent.com/209bdea972b9b6ef90220c59ecbe66d35ffefa8a/68747470733a2f2f63646e2e7261776769742e636f6d2f746b6834342f656d6f74696f6e2f6d61737465722f656d6f74696f6e2e706e67);"
  />
  <img
    alt=""
    class="css-accessibilityImage-9pa8cd"
    draggable="false"
    src="https://camo.githubusercontent.com/209bdea972b9b6ef90220c59ecbe66d35ffefa8a/68747470733a2f2f63646e2e7261776769742e636f6d2f746b6834342f656d6f74696f6e2f6d61737465722f656d6f74696f6e2e706e67"
  />
</div>
`;

exports[`Emotion primitives should render primitive with style prop 1`] = `
<div
  class="css-text-901oao r-color-185hjl9"
  dir="auto"
  style="padding: 10px 10px 10px 10px;"
>
  Emotion primitives
</div>
`;

exports[`Emotion primitives should render the primitive on changing the props 1`] = `
<div
  class="css-text-901oao r-color-185hjl9 r-paddingBottom-k8qxaj r-paddingLeft-b5h31w r-paddingRight-1ah4tor r-paddingTop-1knelpx"
  dir="auto"
>
  Emotion Primitives
</div>
`;

exports[`Emotion primitives should render the primitive when styles applied using object style notation 1`] = `
<div
  class="css-text-901oao r-backgroundColor-1g6456j r-color-howw7u"
  dir="auto"
  style="font-size: 40px;"
>
  Emotion Primitives
</div>
`;

exports[`Emotion primitives should style any other component 1`] = `
<div
  class="css-text-901oao r-color-185hjl9"
  dir="auto"
>
  Hello World
</div>
`;

exports[`Emotion primitives should unmount with theming 1`] = `
<div>
  <div
    class="css-text-901oao r-display-6koalj"
    dir="auto"
    style="background-color: rgb(255, 255, 0);"
  >
    Hello World
  </div>
</div>
`;

exports[`Emotion primitives should work with StyleSheet.create API 1`] = `
<div
  class="css-text-901oao r-color-howw7u r-fontSize-10x49cs"
  dir="auto"
>
  Emotion Primitives
</div>
`;

exports[`Emotion primitives should work with theming from @emotion/react 1`] = `
<div
  class="css-text-901oao r-color-1hxtt4r"
  dir="auto"
>
  Hello World
</div>
`;
